# OpenCV-in-QT

./: CMakeLists.txt  OpenCVinQT.pro  README.md  mainview.cpp  mainview.ui
.github/workflows/: build_release.yml  cmake.yml
